Bug 58858 - FILESAVE: can't save .xls test file as .ods after deleting cells
Summary: FILESAVE: can't save .xls test file as .ods after deleting cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-29 11:04 UTC by VLB
Modified: 2019-05-08 15:41 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Error when i delete cells and save file (17.28 KB, application/vnd.oasis.opendocument.text)
2012-12-29 11:04 UTC, VLB
Details
Can not save from excel to ods (108.00 KB, application/xml)
2013-01-03 19:22 UTC, VLB
Details
Orginal file what can't save by delte cell on 2e and 3e sheet (1.37 MB, application/vnd.oasis.opendocument.spreadsheet)
2013-01-03 19:24 UTC, VLB
Details
test file .ods where i can't delete cell and save (766.95 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-01-05 10:59 UTC, VLB
Details
New test file ods with 2 sheets (440.81 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-01-06 10:34 UTC, VLB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description VLB 2012-12-29 11:04:13 UTC
Created attachment 72247 [details]
Error when i delete cells and save file

Version 4.0.0.0.beta2+ (Build ID: c5229f497008051b078e9f76e00031dfb3b6f41)
windows 7 64 bits

I have i private file and when i delete private info in the first sheet and save it is correct saving.
When i want delete private info on de 2e or 3e sheet is the deletion oke, but when i save the file i get the error mention see attachment.
The file isn't for public.
Comment 1 tommy27 2013-01-02 23:23:06 UTC
it would be hard to understand the problem without a test file.

is the bug reproducible just with that private file or even with other spreadsheets?
Comment 2 VLB 2013-01-03 19:22:52 UTC
Created attachment 72475 [details]
Can not save from excel to ods

1) The file "Issue save excel-ods" can't save too ods and comes error.

2) The file "Issue save ligger" wis the orginal file that that can't save by delete cell in the 2e and 3e sheet. But i have in steps delete more cells and then it is oke. I don't know what the problem is?

I have more sheets problems with save file by delete cells, but when i opy the sheets too a new file and i save then is it oke.
Comment 3 VLB 2013-01-03 19:24:56 UTC
Created attachment 72476 [details]
Orginal file what can't save by delte cell on 2e and 3e sheet

This is orginal file, but have in steps much delete cell and now can i save correct.
Comment 4 tommy27 2013-01-03 21:31:52 UTC
sorry but I'm afraid I don't fully understand your english...

do you still reproduce the bug or not?
Comment 5 VLB 2013-01-03 22:10:01 UTC
I try again:

By the xls file in the attachment, it can reproduce when the file is "save as" ods file.

In the other file isn't reproduce the bug because i have can delete cell in little steps. The file in the attachment is without my private info. In the file with private info is the bug reproducuce the bug.
In more other private file it is already reproduce. I can the file not make public.
Comment 6 tommy27 2013-01-04 01:36:21 UTC
REPRODUCIBLE with Version 4.0.0.0.beta2+ (Build ID: 350ae8294a8df78403fd8cdce56b9aeb8178e13) on Vista 64bit

steps to reproduce:

1- right click on https://bugs.freedesktop.org/attachment.cgi?id=72475) save it as "Issue save excel-ods.xls" (it was incorrectly uploaded as .htm)

2 - delete a random cell in any sheet (issue appears in all of them, not just 2nd or 3rd)

4- save it as ".ods"

5- Error message saying: Error saving the document Issue save excel-ods:
Write Error. The file could not be written.

.................................................

NOT REPRODUCIBLE with LibO 3.6.4
no error upon saving as .osd after deleting cells..

.................................................

added REGRESSION keyword.

modified bug summary.
Comment 7 VLB 2013-01-05 10:08:14 UTC
> 2 - delete a random cell in any sheet (issue appears in all of them, not
> just 2nd or 3rd)

By this file it isn't necesarry "delete a random cell in any sheet". When the file is save as ".ods" it give the error message.

In other file (*.ods) what i have give the error message after i delete cell in any sheet.
Comment 8 VLB 2013-01-05 10:59:58 UTC
Created attachment 72538 [details]
test file .ods where i can't delete cell and save

By this test file .ods when i delete cell and save i get the error message too.

steps:
1) open file "Issue save ligger i.ods"
2) delete cell "B2" in sheet "tabel 10"
3) "save" file
4) error message
Comment 9 tommy27 2013-01-05 13:40:34 UTC
please upload your test files with correct extension...
it seems that you uploaded all those .ods and .xls as .html

anyway, I've noticed that if you delete all other sheets and leave the "tabel 10" sheet alone, then you may delete any cell you want (even B2) and can save the file with no issues.

maybe there's some link between multiple sheets that doesn't allow you to delete cells... does this make any sense to you?

tested on Version 4.0.0.0.beta2+ (Build ID: 65deb382fb2bc45192f3b9224bf0fca00955ee7)
Comment 10 VLB 2013-01-05 14:08:41 UTC
(In reply to comment #9)
> please upload your test files with correct extension...
> it seems that you uploaded all those .ods and .xls as .html
There is no way to upload where i can say it is .xls or .ods, only "automtic detect".

 
> anyway, I've noticed that if you delete all other sheets and leave the
> "tabel 10" sheet alone, then you may delete any cell you want (even B2) and
> can save the file with no issues.
I know, but i don't know where this is come from.

> 
> maybe there's some link between multiple sheets that doesn't allow you to
> delete cells... does this make any sense to you?
> 
> tested on Version 4.0.0.0.beta2+ (Build ID:
> 65deb382fb2bc45192f3b9224bf0fca00955ee7)
I didn't think this is the issue, because then there must by a message by delete cell. By the way in 3.6.4 is there no problem when i delete cell.
Comment 11 tommy27 2013-01-06 00:19:41 UTC
(In reply to comment #10)
> (In reply to comment #9)
> > please upload your test files with correct extension...
> > it seems that you uploaded all those .ods and .xls as .html
> There is no way to upload where i can say it is .xls or .ods, only "automtic
> detect".

you should upload them with full filename and extensione (i.e. testfile.ods) and choose binary file (last of the list)

>  
> > anyway, I've noticed that if you delete all other sheets and leave the
> > "tabel 10" sheet alone, then you may delete any cell you want (even B2) and
> > can save the file with no issues.
> I know, but i don't know where this is come from.
> 

best thing is to create a test file as simpler as possible... 
try deleting one sheet at once and see if the bug is still present...
maybe you will find which sheet is causing the issue
Comment 12 VLB 2013-01-06 10:34:36 UTC
Created attachment 72583 [details]
New test file ods with 2 sheets

I have the first test file bring it to 2 sheets, where i can reproduce the bug in LO Version 4.0.0.0.beta2+ (Build ID: afa240330b51fb3607cfa6390aeb4e085cd1c52):

Steps reproduce 1:
1) open test file "Issue-save-ligger.ods"
2) Go to sheet "NEN"
3) delete cell F76 and "save" file
4) error message

Steps reproduce 2:
1) open test file "Issue-save-ligger.ods"
2) Go to sheet "NEN"
3) "save as" file to a other name or the same name
4) error message 

Steps no reproduce 1:
1) open test file "Issue-save-ligger.ods"
2) stay in the sheet "Profielen"
3) delete cell A28 and "save" file
4) save is oke 

Steps no reproduce 2:
1) open test file "Issue-save-ligger.ods"
2) stay in the sheet "Profielen"
3) "save as" file to a other name or the same name
4) save is oke
Comment 13 tommy27 2013-01-08 18:53:33 UTC
well done. now let's hope a developer will bump into this issue and fix it.
Comment 14 Markus Mohrhard 2013-01-09 21:31:30 UTC
And another regression in the shared drawinglayer export code. I have an initial idea what is going wrong.
Comment 15 Not Assigned 2013-01-10 04:06:13 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d158a09e56e3944458d63a6c572f60dbe4632dad

handle shapes anchored to the wrong sheet without crash, fdo#58858



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 VLB 2013-01-11 19:01:28 UTC
bug comment 12 works fine

bug comment 6 didn't work correct, there is a error message

LO Version 4.1.0.0.alpha0+ (Build ID: 3db92283955741b490dc2d4f9e1782b179fee89)
Comment 17 Markus Mohrhard 2013-01-25 19:51:05 UTC
Looks finally like Noel fixed it much better in Bug 59325.
Comment 18 VLB 2013-01-25 23:03:36 UTC
(In reply to comment #17)
> Looks finally like Noel fixed it much better in Bug 59325.

Thanks for feedback, but i have try with LO Version 4.0.1.0+ (Build ID: 28530d7c254ec154ed1f82b32bea4d59665632e)
and the file didn't save and give ever a error.
Comment 19 tommy27 2013-01-26 09:30:05 UTC
@vlb maybe that build did not have yet that fix. did you try with a more recent daily?
Comment 20 VLB 2013-01-26 14:14:05 UTC
(In reply to comment #19)
> @vlb maybe that build did not have yet that fix. did you try with a more
> recent daily?

I have try in the curent versie Version 4.0.1.0+ (Build ID: ca1994d4877810215c90acc42ce160695e32d03)
http://dev-builds.libreoffice.org/daily/libreoffice-4-0/Win-x86@6/current/libreoffice-4-0~2013-01-25_23.41.12_LibO-Dev_4.0.1.0_Win_x86.msi
Comment 21 Not Assigned 2013-01-31 09:32:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3a17d0b3fba7b5eb9f604baa96abcca2b929ee67

Hyperlink is an optional property, fdo#58858



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 Not Assigned 2013-02-01 10:25:34 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e483ea0d8abda0eb5a0e8cef55229f3e8ac06a21&h=libreoffice-4-0

Hyperlink is an optional property, fdo#58858


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 VLB 2013-02-01 14:11:58 UTC
(In reply to comment #21)
> Markus Mohrhard committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=3a17d0b3fba7b5eb9f604baa96abcca2b929ee67
> 
> Hyperlink is an optional property, fdo#58858
> 
> 
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> Affected users are encouraged to test the fix and report feedback.

I have test this in LO Version 4.1.0.0.alpha0+ (Build ID: 027bb41aa16793e88e9fc1b3550c8c893363647).
It works fine now and didn't get a error!
Thanks for solving this issue.