handle shapes anchored to the wrong sheet without crash, fdo#58858

Change-Id: I00d127dbb6151e3100be931079cbf8907ac69ddd